// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Action: Current User getAccountSingleSignOnDetails 1`] = `
Array [
  Object {
    "meta": Object {
      "method": "GET",
      "url": "/account/sso/saml",
    },
    "type": "GET_ACCOUNT_SSO_DETAILS",
  },
]
`;

exports[`Action: Current User provisionAccountSingleSignOn 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "xml_file": "abc==",
      },
      "method": "POST",
      "url": "/account/sso/saml",
    },
    "type": "PROVISION_ACCOUNT_SSO",
  },
]
`;

exports[`Action: Current User reprovisionAccountSingleSignOn 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "xml_file": "abc==",
      },
      "method": "PUT",
      "url": "/account/sso/saml",
    },
    "type": "REPROVISION_ACCOUNT_SSO",
  },
]
`;

exports[`Action: Current User updateAccountSingleSignOn 1`] = `
Array [
  Object {
    "meta": Object {
      "data": Object {
        "cert": "abc==",
        "enabled": true,
        "provider": "https://sso.sparkpost.com/redirect",
      },
      "method": "PUT",
      "url": "/account/sso/saml",
    },
    "type": "UPDATE_ACCOUNT_SSO",
  },
]
`;
